--- a/src/components/CartTotal/style.css
+++ b/src/components/CartTotal/style.css
@@ -18,3 +18,11 @@
 .box__total .box__total--price {
     color: #828282;
 }
+
+@media (max-width: 425px) {
+    .box__total {}
+
+    .box__total p {}
+
+    .box__total .box__total--price {}
+}
