--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,20 @@ html::-webkit-scrollbar-thumb {
 html::-webkit-scrollbar-thumb:hover {
     background-color: #27AE60;
 }
+
+@media (max-width: 1024px) {
+    main {}
+}
+
+@media (max-width: 768px) {
+    main {
+        padding: 21px 55px;
+        display: block;
+    }
+}
+
+@media (max-width: 425px) {
+    main {
+        padding: 15px 16px;
+    }
+}
