--- a/src/components/Cart/style.css
+++ b/src/components/Cart/style.css
@@ -19,3 +19,27 @@
     color: #FFFFFF;
     padding: 20px;
 }
+
+@media (max-width: 1024px) {
+    .cart {
+        width: 35%;
+    }
+}
+
+@media (max-width: 768px) {
+    .cart {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .cart .cart__title {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .cart {
+        margin-top: 20px;
+        box-shadow: none;
+    }
+}
