--- a/src/components/ProductsList/style.css
+++ b/src/components/ProductsList/style.css
@@ -5,3 +5,24 @@
     width: 100%;
     max-width: 70%;
 }
+
+@media (max-width: 1024px) {
+    .product__list {
+        max-width: 65%;
+    }
+}
+
+@media (max-width: 768px) {
+    .product__list {
+        max-width: 100%;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 425px) {
+    .product__list {
+        flex-wrap: nowrap;
+        overflow: auto;
+        justify-content: flex-start;
+    }
+}
